// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package manager files written properly 1`] = `
Array [
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/@emotion/is-prop-valid/dist/is-prop-valid.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/@emotion/is-prop-valid/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/@emotion/memoize/dist/memoize.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/@emotion/memoize/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/asap/asap.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/asap/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/base64-js/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/base64-js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/bignumber.js/bignumber.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/bignumber.js/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/bignumber.js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/buffer/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/buffer/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/buffer/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/constate/dist/constate.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/constate/dist/ts/src",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/constate/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/core-js/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/core-js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/css-color-keywords/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/css-color-keywords/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/css-to-react-native/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/css-to-react-native/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/encoding/lib/encoding.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/encoding/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/fbjs/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/fbjs/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/has-flag/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/has-flag/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/hoist-non-react-statics/dist/hoist-non-react-statics.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/hoist-non-react-statics/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/hoist-non-react-statics/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/iconv-lite/lib/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/iconv-lite/lib/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/iconv-lite/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/ieee754/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/ieee754/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/is-stream/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/is-stream/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/isomorphic-fetch/fetch-npm-node.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/isomorphic-fetch/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/js-tokens/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/js-tokens/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/loose-envify/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/loose-envify/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/node-fetch/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/node-fetch/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/object-assign/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/object-assign/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/popper.js/dist/umd/popper.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/popper.js/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/popper.js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/postcss-value-parser/lib/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/postcss-value-parser/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/promise/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/promise/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/prop-types/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/prop-types/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react-dom/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react-dom/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react-is/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react-is/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/reakit/lib/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/reakit/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/reakit/ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/rxjs/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/rxjs/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/rxjs/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/safer-buffer/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/safer-buffer/safer.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/schedule/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/schedule/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/setimmediate/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/setimmediate/setImmediate.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-components/dist/styled-components.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-components/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-components/typings/styled-components.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-tools/dist/cjs/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-tools/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-tools/types/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis-rule-sheet/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis-rule-sheet/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis/stylis.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis/stylis.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/supports-color/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/supports-color/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/tslib/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/tslib/tslib.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/tslib/tslib.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/ua-parser-js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/ua-parser-js/src/ua-parser.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/whatwg-fetch/dist/fetch.umd.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/whatwg-fetch/package.json",
]
`;

exports[`package manager node_modules updated 1`] = `
Array [
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/@emotion/is-prop-valid/dist/is-prop-valid.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/@emotion/is-prop-valid/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/@emotion/memoize/dist/memoize.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/@emotion/memoize/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/asap/asap.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/asap/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/base64-js/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/base64-js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/bignumber.js/bignumber.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/bignumber.js/bignumber.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/bignumber.js/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/bignumber.js/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/bignumber.js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/bignumber.js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/buffer/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/buffer/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/buffer/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/constate/dist/constate.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/constate/dist/ts/src",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/constate/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/core-js/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/core-js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/css-color-keywords/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/css-color-keywords/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/css-to-react-native/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/css-to-react-native/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/encoding/lib/encoding.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/encoding/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/fbjs/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/fbjs/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/has-flag/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/has-flag/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/hoist-non-react-statics/dist/hoist-non-react-statics.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/hoist-non-react-statics/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/hoist-non-react-statics/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/iconv-lite/lib/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/iconv-lite/lib/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/iconv-lite/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/ieee754/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/ieee754/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/is-stream/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/is-stream/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/isomorphic-fetch/fetch-npm-node.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/isomorphic-fetch/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/js-tokens/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/js-tokens/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/loose-envify/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/loose-envify/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/lru-cache/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/lru-cache/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/node-fetch/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/node-fetch/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/object-assign/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/object-assign/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/onigasm/lib/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/onigasm/lib/typings/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/onigasm/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/popper.js/dist/umd/popper.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/popper.js/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/popper.js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/postcss-value-parser/lib/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/postcss-value-parser/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/promise/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/promise/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/prop-types/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/prop-types/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/pseudomap/map.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/pseudomap/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react-dom/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react-dom/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react-is/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react-is/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/react/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/reakit/lib/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/reakit/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/reakit/ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/rxjs/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/rxjs/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/rxjs/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/safer-buffer/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/safer-buffer/safer.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/schedule/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/schedule/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/setimmediate/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/setimmediate/setImmediate.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-components/dist/styled-components.cjs.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-components/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-components/typings/styled-components.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-tools/dist/cjs/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-tools/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/styled-tools/types/index.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis-rule-sheet/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis-rule-sheet/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis/stylis.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/stylis/stylis.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/supports-color/index.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/supports-color/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/tslib/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/tslib/tslib.d.ts",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/tslib/tslib.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/ua-parser-js/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/ua-parser-js/src/ua-parser.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/whatwg-fetch/dist/fetch.umd.js",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/whatwg-fetch/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/yallist/package.json",
  "/Users/alexfrag/Documents/Development/NEO/neo-one/node_modules/yallist/yallist.js",
]
`;
